fix: apply smooth-scroll only on md+ to fix scroll issue on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,9 +140,6 @@
   * {
     @apply border-border outline-ring/50;
   }
-  html {
-    scroll-behavior: smooth;
-  }
   body {
     color: var(--foreground-dark);
     background: var(--background-dark);
